# deepsearch

./: Dockerfile  README.md  app.py  grok_client.py  pyproject.toml  response.json  response.txt  test.py
.github/workflows/: deploy.yml
utils/: airtable.py  cdp_tools.py  discord.py  grok_client.py  grok_utils.py  llm.py  nitter.py  notion.py  ripGrok.py  seedream.py  set_env.py  telegram.py  vars.py
