[project]
name = "deepsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.11",
    "html2text>=2025.4.15",
    "notion-client>=2.3.0",
    "openai>=1.77.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
